--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <!--================ End Header Menu Area =================-->
-    <!--================ Start Contact Area =================-->
+    <!--================ Start Contact Area ================-->
     <div class="container pt-4">
         <div class="row">
             <div class="col-12 mb-4">
