--- a/Frontend/shop.html
+++ b/Frontend/shop.html
@@ -20,7 +20,7 @@
     <!--================ Start Header Menu Area =================-->
     <header>
         <nav class="navbar navbar-expand-md navbar-light fixed-top topnav">
-            <a class="navbar-brand" href="index.html">Go-Bike</a>
+            <a class="navbar-brand" href="index.html">Go-Bicikli</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
