--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -58,7 +58,7 @@
         <div class="container-fluid home-photo">  
             <div class="home-shop-now-btn">
                 <div class="vertical-center">
-                    <h2 style="color: blue">Welcome to Go-Bicikli Web Shop</h2>
+                    <h2 style="color: black">Welcome to Go-Bicikli Web Shop</h2>
                     <a class="btn btn-secondary" href="shop.html">Shop Now</a>
                 </div>
             </div>
