--- a/Frontend/single-item.html
+++ b/Frontend/single-item.html
@@ -91,7 +91,7 @@
                         <div class="card-body pb-0">
                             <h5>Marin Bolinas Ridge 2</h5>
                             <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 4.5</span></h5>
-                            <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(2)">Read more</a>
+                            <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(2)">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         <div class="card-body pb-0">
                             <h5>Polygon Strattos S5 - Shimano 105</h5>
                             <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 5</span></h5>
-                            <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(4)">Read more</a>
+                            <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(4)">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         <div class="card-body pb-0">
                             <h5>Polygon Mt Bromo N8</h5>
                             <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 5</span></h5>
-                            <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(8)">Read more</a>
+                            <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(8)">Read more</a>
                         </div>
                     </div>
                 </div>
