--- a/Frontend/shopping-cart.html
+++ b/Frontend/shopping-cart.html
@@ -50,12 +50,16 @@
     </br>
     </hr>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12">
-                <h3 id="cartItemsHeader">Your shopping cart is empty...</h3>
-                <div id="cartItems"></div>
-                <button class="btn btn-danger" onclick="clearBasket()">Remove items</button>
-                </br>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <h3 id="cartItemsHeader">Your shopping cart</h3>
+                    <div id="cartItems">
+                        <!-- A kosár tartalma dinamikusan betöltődik -->
+                    </div>
+                    <button class="btn btn-danger" onclick="clearBasket()">Remove items</button>
+                    <a href="Payment.html" class="btn btn-success">Tovább a fizetéshez</a>
+                </div>
             </div>
         </div>
     </div>
