--- a/Frontend/single-item.html
+++ b/Frontend/single-item.html
@@ -121,7 +121,7 @@
     </div>
     </br>
     </hr>
-    function addToCart() {
+    <script>function addToCart() {
         const item = {
             name: document.getElementById('dynamicItemName').innerText,
             price: 700, // Példa ár, ezt dinamikusan is beállíthatod
@@ -137,6 +137,7 @@
     
         alert('Termék hozzáadva a kosárhoz!');
     }
+    </script>>
     <!--================ Start Newsletter Area =================-->
     <hr>
     <div class="justify-content-md-center pt-1">
