--- a/Frontend/single-item.html
+++ b/Frontend/single-item.html
@@ -121,7 +121,8 @@
     </div>
     </br>
     </hr>
-    <script>function addToCart() {
+    <script>
+    function addToCart() {
         const item = {
             name: document.getElementById('dynamicItemName').innerText,
             price: 700, // Példa ár, ezt dinamikusan is beállíthatod
